@@ -44,7 +44,7 @@ predictions.ranger.prediction <- function(x, ...) {
   if (class(x) != "ranger.prediction") {
     stop("Object ist no ranger.prediction object.")
   }
-  if (x$treetype == "Classification" | x$treetype == "Regression") {
+  if (x$treetype == "Classification" | x$treetype == "Regression" | x$treetype == "Probability estimation") {
     if (is.null(x$predictions)) {
       stop("No predictions found.")
     } else {
@@ -75,7 +75,7 @@ predictions.ranger<- function(x, ...) {
   if (class(x) != "ranger") {
     stop("Object ist no ranger object.")
   }
-  if (x$treetype == "Classification" | x$treetype == "Regression") {
+  if (x$treetype == "Classification" | x$treetype == "Regression" | x$treetype == "Probability estimation") {
     if (is.null(x$predictions)) {
       stop("No predictions found.")
     } else {
