@@ -1,30 +1,30 @@
 /*-------------------------------------------------------------------------------
-This file is part of Ranger.
-    
-Ranger is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
+ This file is part of Ranger.
 
-Ranger is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
+ Ranger is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, either version 3 of the License, or
+ (at your option) any later version.
 
-You should have received a copy of the GNU General Public License
-along with Ranger. If not, see <http://www.gnu.org/licenses/>.
+ Ranger is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ GNU General Public License for more details.
 
-Written by: 
+ You should have received a copy of the GNU General Public License
+ along with Ranger. If not, see <http://www.gnu.org/licenses/>.
 
-Marvin N. Wright
-Institut für Medizinische Biometrie und Statistik
-Universität zu Lübeck
-Ratzeburger Allee 160
-23562 Lübeck 
+ Written by:
 
-http://www.imbs-luebeck.de
-wright@imbs.uni-luebeck.de
-#-------------------------------------------------------------------------------*/
+ Marvin N. Wright
+ Institut für Medizinische Biometrie und Statistik
+ Universität zu Lübeck
+ Ratzeburger Allee 160
+ 23562 Lübeck
+
+ http://www.imbs-luebeck.de
+ wright@imbs.uni-luebeck.de
+ #-------------------------------------------------------------------------------*/
 
 #include "TreeProbability.h"
 #include "utility.h"
@@ -120,18 +120,27 @@ void TreeProbability::createEmptyNodeInternal() {
 
 double TreeProbability::computePredictionAccuracyInternal() {
 
-  // Here, use majority vote, as in Classification tree
-  size_t num_predictions = predictions.size();
-  size_t num_missclassifications = 0;
-  for (size_t i = 0; i < num_predictions; ++i) {
-    size_t predicted_classID = mostFrequentClass(predictions[i], random_number_generator);
-    double predicted_value = (*class_values)[predicted_classID];
-    double real_value = data->get(oob_sampleIDs[i], dependent_varID);
-    if (predicted_value != real_value) {
-      ++num_missclassifications;
-    }
+  double sum_of_squares = 0;
+  for (size_t i = 0; i < predictions.size(); ++i) {
+    size_t real_classID = (*response_classIDs)[i];
+    double predicted_value = predictions[i][real_classID];
+    sum_of_squares += (1 - predicted_value) * (1 - predicted_value);
   }
-  return (1.0 - (double) num_missclassifications / (double) num_predictions);
+  return (1.0 - sum_of_squares / (double) predictions.size());
+
+  // TODO: Remove
+//  // Here, use majority vote, as in Classification tree
+//  size_t num_predictions = predictions.size();
+//  size_t num_missclassifications = 0;
+//  for (size_t i = 0; i < num_predictions; ++i) {
+//    size_t predicted_classID = mostFrequentClass(predictions[i], random_number_generator);
+//    double predicted_value = (*class_values)[predicted_classID];
+//    double real_value = data->get(oob_sampleIDs[i], dependent_varID);
+//    if (predicted_value != real_value) {
+//      ++num_missclassifications;
+//    }
+//  }
+//  return (1.0 - (double) num_missclassifications / (double) num_predictions);
 }
 
 bool TreeProbability::findBestSplit(size_t nodeID, std::vector<size_t>& possible_split_varIDs) {
